[build-system]
requires = [
    "setuptools >= 60.0.0",
    "wheel",
    "Cython",
    "numpy",
    "imageio",
    "glfw",
    "patchelf","mujoco"
]
build-backend = "setuptools.build_meta"

[project]
name = "my-safety-gym-project"
description = "Safe RL project using OpenAI Safety Gym, PyTorch, CleanRL, and Stable Baselines3."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["Safe Reinforcement Learning", "Gym", "MuJoCo", "PyTorch", "Stable Baselines", "CleanRL"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "gym==0.23.1",
    "numpy>=1.20",
    "mujoco_py==2.0.2.7",
    "torch>=1.12.0",
    "stable-baselines3>=1.6.2",
    "opencv-python",
    "joblib>=1.0",
    "tyro>=0.5.10",
    "tensorboard",
    "cleanrl @ git+https://github.com/vwxyzjn/cleanrl.git"
]

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/openai/safety-gym"
Repository = "https://github.com/openai/safety-gym"
"Bug Tracker" = "https://github.com/openai/safety-gym/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["safety_gym", "safety_gym.*"]
